deployments/k8s/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-http
  namespace: kafka-streams
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: streams-api-route
  namespace: kafka-streams
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: kafka-streams
  rules:
    - backendRefs:
        - kind: Service
          name: kafka-streams-system-streams-api
          port: 80
